--- a/package.json
+++ b/package.json
@@ -1,14 +1,46 @@
 {
-    "name": "lazy-youtube-player",
-    "private": true,
-    "scripts": {
-        "bootstrap": "lerna bootstrap",
-        "build": "lerna run build",
-        "test": "lerna run test",
-        "lint": "lerna run lint"
-    },
-    "devDependencies": {
-        "lerna": "^4.0.0",
-        "typescript": "^4.5.4"
-    }
+  "name": "lazy-youtube-player",
+  "version": "0.1.0",
+  "description": "A lightweight, customizable YouTube player component with lazy loading capabilities",
+  "main": "dist/index.js",
+  "module": "dist/index.esm.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
+  "scripts": {
+    "build": "tsc",
+    "test": "jest",
+    "lint": "eslint src/**/*.{js,ts,tsx}",
+    "format": "prettier --write src/**/*.{js,ts,tsx,css,md,json}"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/nexoscreator/lazy-youtube-player.git"
+  },
+  "keywords": [
+    "youtube",
+    "player",
+    "lazy-loading",
+    "react",
+    "vue",
+    "svelte"
+  ],
+  "author": "nexoscreator",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/nexoscreator/lazy-youtube-player/issues"
+  },
+  "homepage": "https://github.com/nexoscreator/lazy-youtube-player#readme",
+  "devDependencies": {
+    "@types/jest": "^27.0.3",
+    "@typescript-eslint/eslint-plugin": "^5.6.0",
+    "@typescript-eslint/parser": "^5.6.0",
+    "eslint": "^8.4.1",
+    "jest": "^27.4.5",
+    "prettier": "^2.5.1",
+    "ts-jest": "^27.1.1",
+    "tslib": "^2.8.1",
+    "typescript": "^4.9.5"
+  }
 }
