--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/nexoscreator/lazy-youtube-player.git"
+    "url": "https://github.com/nexoscreator/lazy-youtube-player.git"
+  },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/"
   },
   "keywords": [
     "youtube",
@@ -31,9 +34,6 @@
     "url": "https://github.com/nexoscreator/lazy-youtube-player/issues"
   },
   "homepage": "https://github.com/nexoscreator/lazy-youtube-player#readme",
-  "publishConfig": {
-    "registry": "https://npm.pkg.github.com"
-  },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.6.0",
     "@typescript-eslint/parser": "^5.6.0",
